master: working on connecting frontend/backend with updates for uiOrder. ran into nasty CORs issue I didn't see before. hacked around, but not permafix, no good for dev
